# Corr2Surrogate

./: .gitignore  HARNESS_CONTRACT.md  PROJECT_LAYOUT.md  README.md  Relaytic_transformation_plan.md  Relaytic_transformation_plan_extended.md  Transformation_plan.md  idea_vault.txt  pyproject.toml
configs/: default.yaml
data/: README.md
data/public/: public_testbench_dataset_20k_minmax.meta.json
src/corr2surrogate/agents/: __init__.py  agent1_analyst.py  agent2_modeler.py
src/corr2surrogate/analytics/: __init__.py  correlations.py  model_recommendation.py  quality_checks.py  ranking.py  reporting.py  stationarity.py
src/corr2surrogate/core/: config.py  logging.py  schemas.py
src/corr2surrogate/ingestion/: csv_loader.py  profiler.py  schema_inference.py
src/corr2surrogate/modeling/: __init__.py  baselines.py  checkpoints.py  classifiers.py  evaluation.py  normalization.py  optuna_tuning.py  sequence_lstm.py  splitters.py  training.py  uncertainty.py
src/corr2surrogate/orchestration/: __init__.py  agent_loop.py  default_tools.py  handoff_contract.py  harness_runner.py  local_llm_setup.py  local_provider.py  runtime_policy.py  workflow.py  (+1 more)
tests/: test_agent1_analysis_tool.py  test_agent_loop.py  test_cli.py  test_correlations.py  test_harness_runner.py  test_ingestion.py  test_local_llm_setup.py  test_local_provider.py  test_model_recommendation.py  test_model_training_candidates.py  test_modeling_pipeline.py  test_quality_checks.py  test_ranking.py  test_runtime_policy.py  test_splitting.py  test_stationarity.py  test_tool_registry.py  test_workflow.py
(+8 files in other folders)
